--- a/index.ipynb
+++ b/index.ipynb
@@ -133,13 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    term[0] * input_value ** term[1]\n",
-    "    pass"
+    "    return term[0] * input_value ** term[1]\n"
    ]
   },
   {
