--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    pair1 = "
+    "    pair1 = list_of_terms[0]\n",
+    "    pair2 ="
    ]
   },
   {
