Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    pair1 = list_of_terms[0]\n",
-    "    pair2 ="
+    "    pair2 = list_of_terms[1]"
    ]
   },
   {
