--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "    pair1 = list_of_terms[0]\n",
     "    pair2 = list_of_terms[1]\n",
-    "    term1 = pair1[0]"
+    "    term1 = pair1[0] * x_value ** pair1[1"
    ]
   },
   {
