Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
     "    pair1 = list_of_terms[0]\n",
     "    pair2 = list_of_terms[1]\n",
     "    term1 = pair1[0] * x_value ** pair1[1]\n",
-    "    term 2 = pair1[0] * x_value ** pair1[1]"
+    "    term2 = pair2[0] * x_value ** pair2[1]\n",
+    "    retu"
    ]
   },
   {
