Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
     "    pair2 = list_of_terms[1]\n",
     "    term1 = pair1[0] * x_value ** pair1[1]\n",
     "    term2 = pair2[0] * x_value ** pair2[1]\n",
-    "    retu"
+    "    return term1 - term2"
    ]
   },
   {
