Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,16 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    pair1 = list_of_terms[0]\n",
     "    pair2 = list_of_terms[1]\n",
     "    term1 = pair1[0] * x_value ** pair1[1]\n",
     "    term2 = pair2[0] * x_value ** pair2[1]\n",
-    "    return term1 - term2"
+    "    return term1 - term2\n",
+    "output_at([(3, 2), (-11, 0)], 2)"
    ]
   },
   {
