Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,8 +195,8 @@
    ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    pair1 = list_of_terms[0]\n",
-    "    pair2 = list_of_terms[1]\n",
+    "    tup1 = list_of_terms[0]\n",
+    "    tup2 = list_of_terms[1]\n",
     "    term1 = pair1[0] * x_value ** pair1[1]\n",
     "    term2 = pair2[0] * x_value ** pair2[1]\n",
     "    return term1 - term2\n",
