Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,8 +197,8 @@
     "def output_at(list_of_terms, x_value):\n",
     "    tup1 = list_of_terms[0]\n",
     "    tup2 = list_of_terms[1]\n",
-    "    term1 = tup1[0] * x_value ** pair1[1]\n",
-    "    term2 = tup2[0] * x_value ** pair2[1]\n",
+    "    term1 = tup1[0] * x_value ** tup1[1]\n",
+    "    term2 = tup2[0] * x_value ** tup2[1]\n",
     "    return term1 - term2\n",
     "output_at([(3, 2), (-11, 0)], 2)"
    ]
