Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
     "    tup2 = list_of_terms[1]\n",
     "    term1 = tup1[0] * x_value ** tup1[1]\n",
     "    term2 = tup2[0] * x_value ** tup2[1]\n",
-    "    return term1 - term2\n",
+    "    return term1 + term2\n",
     "output_at([(3, 2), (-11, 0)], 2)"
    ]
   },
