--- a/index.ipynb
+++ b/index.ipynb
@@ -2271,6 +2271,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
+    "    f = output_at(list_o)\n",
     "    "
    ]
   },
