Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2272,7 +2272,8 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    f = output_at(list_of_terms)\n",
-    "    num = f(x_value )\n",
+    "    num = f(x_value + delta_x) - f(x_value)\n",
+    "    \n",
     "    "
    ]
   },
