--- a/index.ipynb
+++ b/index.ipynb
@@ -2284,7 +2284,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    f = output_at(list_of_terms)\n",
+    "    f = output_at(list_of_terms,x_value)\n",
     "    num = f(x_value + delta_x) - f(x_value)\n",
     "    return num / delta_x\n",
     "    "
