Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2283,8 +2283,8 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    term1 = output_at(list_of_terms, x_value )\n",
-    "    num = f(x_value + delta_x) - f(x_value)\n",
+    "    term1 = output_at(list_of_terms, x_value + delta_x)\n",
+    "    term2  = f(x_value + delta_x) - f(x_value)\n",
     "    return num / delta_x\n",
     "    "
    ]
