Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2284,7 +2284,7 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    term1 = output_at(list_of_terms, x_value + delta_x)\n",
-    "    term2 = output_at(x_value)\n",
+    "    term2 = output_at(list_of_terx_value)\n",
     "    num = term1 - term2\n",
     "    return num / delta_x\n",
     "    "
