Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3307,7 +3307,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    delf = delta_f\n",
+    "    delf = delta_f()\n",
     "    "
    ]
   },
