--- a/index.ipynb
+++ b/index.ipynb
@@ -3307,7 +3307,8 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    delf = delta_f()\n",
+    "    delf = delta_f(list_of_terms, x_value, delta_x)\n",
+    "    return delf / delta_x\n",
     "    "
    ]
   },
