Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3302,28 +3302,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    delf = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return delf / delta_x\n",
+    "    return delf\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "4.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
